--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -1,9 +1,13 @@
-name: GitHub Actions Demo
-on: [push]
+name : Agent Creation
+
+on: push
+
 jobs:
-  Explore-GitHub-Actions:
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+   Agent_Creation_Test1:
+      name: Agent Creation Job
+       runs-on: ubuntu-latest
+       
+       steps:
+         -run: echo "This is running inside a ${{runner.os}} server in Github"
+  
+
