--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -3,11 +3,11 @@ name : Agent Creation
 on: push
 
 jobs:
-   Agent_Creation_Test1:
+  Agent_Creation_Job1:
       name: Agent Creation Job
-       runs-on: ubuntu-latest
-       
-       steps:
-         -run: echo "This is running inside a ${{runner.os}} server in Github"
+      run-on: ubuntu-latest:
+      
+        steps:
+        -run: echo "This is running inside a ${{runner.os}} server in Github"
   
 
