--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -8,5 +8,10 @@ jobs:
       runs-on: ubuntu-latest
       steps:
         - run: echo "This is running inside a ${{ runner.os }} server in Github"
+        - name: Check out source code
+          uses: actions/checkout@v2.4.2
+        - run: echo "This repo is ${{ github.repository }}.."
+ 
+        
   
  
