--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -11,6 +11,10 @@ jobs:
         - name: Check out source code
           uses: actions/checkout@v2.4.2
         - run: echo "This repo is ${{ github.repository }}.."
+        - name: Run a inline script
+          run:  |
+            mkdir newfolder
+            ls -l
  
         
   
