--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -5,7 +5,7 @@ on: push
 jobs:
   Agent_Creation_Job1:
       name: Agent Creation Job
-      runs-on: ubuntu-latest
+      runs-on: windows-latest
       steps:
         - run: echo "This is running inside a ${{ runner.os }} server in Github"
         - name: Check out source code
