--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -16,6 +16,9 @@ jobs:
             mkdir newfolder
             ls -l
           shell: bash
+        - name: Run a script file from repo
+          run: sh ./run.sh
+          shell: pwsh
  
         
   
